tests/paczka2/big_fuzzy/39743618.err
Error in line 3: S304 S304 98,8
Error in line 5: S304 A121 70,7
Error in line 2: 7btpu A456 74,5
Error in line 10: 5Zvc0JOn S304 71,8
Error in line 16: S304 A747 8,09
Error in line 7: S304 A456 15,3
Error in line 20: S304 A747 12,0
Error in line 37: S304 A456 38,0
Error in line 41: S304 A121 6,82
Error in line 40: S304 A121 7,5
Error in line 34: 7btpu A747 73,2
Error in line 54: sgt A456 42,7
Error in line 61: VnSp A747 14,4
Error in line 76: Ft7HnBGGRiX A456 6M,0
Error in line 65: sgt A121 80,8
Error in line 86: 8AueI S304 318,0
Error in line 97: 7btpu A456 56,4
Error in line 106: 7btpu A747 80,6
Error in line 73: VnSp A121 174,8
Error in line 105: sgt S304 223,7
Error in line 107: 7btpu S304 96,2
Error in line 122: 7btpu A121 64,7
Error in line 130: 7btpu A456 122,6
Error in line 125: sgt S304 90,8
Error in line 142: sgt A747 95,5
Error in line 141: Ft7HnBGGRiX A747 24,5
Error in line 151: sgt A747 17,0
Error in line 161: Ft7HnBGGRiX A121 376,2
Error in line 176: VnSp A121 139,0
Error in line 175: sgt A121 78,8
Error in line 186: Ft7HnBGGRiX A121 40,8
Error in line 196: 8AueI A456 24,1
Error in line 193: S304 A747 6,9
Error in line 202: Ft7HnBGGRiX A747 86,4
Error in line 216: 8AueI Av2v 60,4
Error in line 204: Ft7HnBGGRiX S304 31,3
Error in line 208: 8AueI A121 36,6
Error in line 235: 7btpu A456 19,04
Error in line 231: 7btpu A456 88,4
Error in line 240: Ft7HnBGGRiX A121 16,9
